<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/userlistIcon" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/userSummon"
            android:id="@+id/userSummon"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Region"
            android:id="@+id/userRegion"
            android:layout_below="@+id/userSummon"
            android:layout_alignStart="@+id/userSummon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/userSummonLevel"
            android:id="@+id/userSummonerLevel"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/userSummonID"
            android:id="@+id/userSummonID"
            android:layout_below="@+id/userRegion"
            android:layout_alignStart="@+id/userRegion" />
    </RelativeLayout>
</LinearLayout>