<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="cgChampId"
            android:id="@+id/cgChampId"
            android:layout_marginEnd="13dp"
            android:layout_above="@+id/cgSpell1"
            android:layout_alignEnd="@+id/imageView"
            android:layout_marginBottom="11dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cgChampName"
            android:id="@+id/cgChampName"
            android:layout_above="@+id/cgPlayer"
            android:layout_toEndOf="@+id/cgChampId" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cgPlayer"
            android:id="@+id/cgPlayer"
            android:layout_alignBaseline="@+id/cgChampId"
            android:layout_alignBottom="@+id/cgChampId"
            android:layout_toEndOf="@+id/cgChampId" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="spell1"
            android:id="@+id/cgSpell1"
            android:layout_above="@+id/cgSpell2"
            android:layout_alignStart="@+id/cgSpell2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="spell2"
            android:id="@+id/cgSpell2"
            android:layout_alignBottom="@+id/imageView"
            android:layout_toEndOf="@+id/cgChampId" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cgPlayerId"
            android:id="@+id/cgPlayerId"
            android:layout_below="@+id/cgChampName"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>